2004-08-19  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Fix Tree matching (revert r1.67->1.68 in part).

2004-08-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Typo in is_fetched() for Type:bundle.

2004-08-16  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm: Fixed %-expansion on Files.

2004-08-16  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Unify get_*script() into new get_script().
	* Engine.pm: update dumpinfo for new get_script().

2004-08-15  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Implement conditionals for Files field.
	conditional_space_list: trim leading/trailing whitespace in return
	value.
	* Engine.pm: update dumpinfo for new conditionalized Files.

2004-08-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: support for newer (and 64-bit)  versions of gcc

2004-08-13  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Remove 'fink checksums'.

2004-08-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Recognize darwin 7.5.0.

2004-08-09  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: disable caching for get_env if in bootstrapping mode.

2004-08-09  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: catch "%p\/src\/" also, not just "%p/src/".

2004-08-08  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Rename parse_configureparams() to prepare_percent_c()
	and: no longer consider %c cacheable and re-protect % in %c.
	* Engine.pm: fixes for prepare_percent_c().

2004-08-08  Max Horn <max@quendi.de>

	* Engine.pm: Fix list command with regards to virtual packages.

2004-08-05  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Config.pm: correct the regex for parsing Trees in write_sources_list

2004-08-05  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: cleaner form of the existing code for detecting
	the cctools version that doesn't use `strip`  =)

2004-08-03  Daniel Macks  <dmacks@netspace.org>
