@@ -1,3 +1,12 @@
+2004-09-09  Daniel Macks  <dmacks@netspace.org>
+
+	* VirtPackage.pm: only set cctools_single_module version if it exists.
+
+2004-09-06  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* PkgVersion.pm, VirtPackage.pm: Some tweaks to the way
+	system-java and $JAVA_HOME work.
+
 2004-08-19  Daniel Macks  <dmacks@netspace.org>
 
 	* SelfUpdate.pm: Fix Tree matching (revert r1.67->1.68 in part).
